# htmx-examples-api

./: .env.example  .gitignore  Dockerfile.postgrest  POSTGREST_README.md  README.md  app.yaml  check_db.sh  check_do_database_api.sh  check_postgrest_logs.sh  check_postgrest_status.sh  cleanup_repo.sh  configure_web_anon_role.sql  create_htmx_api_droplet.sh  curl_example.sh  deploy_postgrest_to_droplet.sh  direct_database_search_functions.md  direct_insert.sql  docker-compose.yml  download_examples.sh  enhance_text_search.sql  extract_schema.md  fix_permissions.sql  fix_postgrest.sh  fix_postgrest_config.sh  fix_search_function.sql  generate_config.py  generate_embeddings.py  generate_postgrest_conf.sh  htmx_examples_multi_schema.json  htmx_examples_schema.json  htmx_multi_schema.json  identify_essential_files.sh  import_all.sql  import_all_examples.py  import_examples.sh  package-lock.json  package.json  postgrest.conf.example  process_htmx_examples.sh  pyproject.toml  (+13 more)
analysis/: combined_input.md  essential_files_report.md
artifacts/: README.md  check_vector.sql  htmx_schema.json  import_direct.sh  import_examples.sql  update_scripts_to_use_env.sh
summaries/: README.md  env_secrets_summary.md  final_workflow_summary.md  htmx_examples_summary.md  workflow_summary.md
workflow/: 1-scraping.md  2-extracting-to-json.md  3-creating-postgresql.md  4-uploading-to-postgres.md  5-embedding.md  6-creating-pgsql-functions.md  7-deploying-postgrest.md  apply_search_functions.sh  deploy_middleware.sh  deploy_postgrest.sh  ecosystem.config.js  embed_examples.py  middleware_app.js  (+16 more)
(+6 files in other folders)
